--- a/Underliner/manifest.json
+++ b/Underliner/manifest.json
@@ -1,7 +1,7 @@
 {
 
   /* Extension Metadata */
-  "name": "Neurablast",
+  "name": "Underliner",
   "version": "2.0",
   "description": "Reading assistance for dyslexic",
 
